# ant-colony-optimization-project

./: README.md
programs/lowlevel/: run.sh
programs/lowlevel/bpp/: 1002_80000_NR_0.txt  201_2500_NR_0.txt  600_20000_NR_0.txt  801_40000_NR_0.txt  CMakeLists.txt  CMakeLists.txt.orig  build.sh  build_seq.sh  buildlocal.sh  runall.sh
programs/lowlevel/bpp/include/: aco_v3_cuda_algorithm.cuh  file_helper.h
programs/lowlevel/bpp/src/: aco_v3_cuda.cu  aco_v3_cuda_algorithm.cu  file_helper.cpp
programs/lowlevel/mkp/: CMakeLists.txt  build.sh  buildlocal.sh
programs/lowlevel/mkp/include/: mknap_aco_cuda_algorithm.cuh
programs/lowlevel/mkp/mknap/: mknap2  mknap4  mknap5  mknap6  mknap7
programs/lowlevel/mkp/src/: mknap_aco_cuda.cu  mknap_aco_cuda_algorithm.cu
programs/lowlevel/tsp/: CMakeLists.txt  build.sh  buildlocal.sh  mapa.txt
programs/lowlevel/tsp/include/: acoCuda.cuh  aco_cuda_algorithm.cuh  aco_gpu_algorithm.cuh  aco_openmp_algorithm.h  aco_openmp_v2_algorithm.h  aco_seq_algorithm.h  aco_v1_cuda_algorithm.cuh  aco_v2_cuda_algorithm.cuh  aco_v3_cuda_algorithm.cuh  file_helper.h  timer.h
programs/lowlevel/tsp/src/: acoCuda.cu  aco_cuda.cu  aco_cuda_algorithm.cu  aco_gpu.cu  aco_gpu_algorithm.cu  aco_mpi_algorithm.cpp  aco_openmp.cpp  aco_openmp_algorithm.cpp  aco_openmp_v2.cpp  aco_openmp_v2_algorithm.cpp  aco_seq.cpp  aco_seq_algorithm.cpp  aco_v1_cuda.cu  aco_v1_cuda_algorithm.cu  aco_v2_cuda.cu  aco_v2_cuda_algorithm.cu  aco_v3_cuda.cu  aco_v3_cuda_algorithm.cu  file_helper.cpp  mknap_aco_cuda.cu  mknap_aco_cuda_algorithm.cu
programs/lowlevel/tsp/tsplib/: lin318.txt  pcb442.txt
programs/musket/bpp/: 402_10000_NR_0.txt  BPP.musket  CMakeCache.txt  CMakeLists.txt  Falkenauer_t60_00.txt  Makefile  build-and-run.sh  build-and-submit.sh  cmake_install.cmake  localexectemp.sh  nvprof-job.conf  nvprof-job.sh  nvprof.sh
programs/musket/bpp/include/: kernel.cuh  musket.cuh
programs/musket/bpp/src/: BPP_0.cu  BPP_singlekernel.cu  Randoms.cpp  aco_v3.cu  test.cu
programs/musket/mkp/model/: Knapsack.musket
programs/musket/tsp/: CMakeLists.txt  aco.musket  build-and-run.sh  build-and-submit.sh  job.conf  job.sh  nvprof-job.conf  nvprof-job.sh  nvprof.sh
programs/musket/tsp/include/: aco_iroulette.cuh  kernel.cuh  musket.cuh
programs/musket/tsp/src/: Randoms.cpp  aco_iroulette_0.cu  aco_start.cuh
results/lowlevel/bpp/2080/: 256_2080_complete_bpp.out  256_2080_complete_bpp_err.out  256_ll_aco_bpp_p0.out  256_ll_aco_bpp_p1.out  256_ll_aco_bpp_p2.out  256_ll_aco_bpp_p3.out  256_ll_aco_bpp_p4.out  256_ll_aco_bpp_p5.out
results/lowlevel/bpp/k20/: 256_k20_complete_bpp.out  256_k20_complete_bpp_err.out
results/lowlevel/bpp/quadro/: ll_quadro.out  quadro_ll_bpp.out
results/lowlevel/bpp/v100/: 256_v100_complete_bpp.out  256_v100_complete_bpp_err.out
results/lowlevel/mkp/2080/: Knapsack_LL_2080.csv  Knapsack_LL_2080.ods  mknap_aco_gpu2080_problem0.out  mknap_aco_gpu2080_problem1.out  mknap_aco_gpu2080_problem2.out  mknap_aco_gpu2080_problem3.out  mknap_aco_gpu2080_problem4.out  mknap_aco_gpu2080_problem5.out  mknap_aco_gpu2080_problem6.out
results/lowlevel/mkp/k20/: mknap_aco_gpuk20_problem4.out
results/lowlevel/mkp/quadro/: Knapsack_LL_Quadro.csv  Knapsack_LL_Quadro.ods
results/lowlevel/mkp/v100/: Knapsack_LL_v100.csv  Knapsack_LL_v100.ods  mknap_aco_gpuv100_problem0.out  mknap_aco_gpuv100_problem1.out  mknap_aco_gpuv100_problem2.out  mknap_aco_gpuv100_problem3.out  mknap_aco_gpuv100_problem4.out  mknap_aco_gpuv100_problem5.out  mknap_aco_gpuv100_problem6.out
results/lowlevel/tsp/2080/: Average p kernel.ods  LowLevel_1,3,5-12_average.csv  LowLevel_1,3,5-12_splitkernels.csv  Lowlevel_route_kernel_average.csv  aco_gpu_problem11.out  aco_gpu_problem5.out  ll_total_time_average.csv
results/lowlevel/tsp/2080/Kernels/: Musket_1,3,5-12_average.csv  aco_gpu_problem1.out  aco_gpu_problem11.out  aco_gpu_problem12.out  aco_gpu_problem3_exclusive.out  aco_gpu_problem4.out  aco_gpu_problem6.out  aco_gpu_problem7.out  aco_gpu_problem8.out  aco_gpu_problem9.out  allresults (copy).csv  allresults.csv  compile.out
results/musket/bpp/: 35paking.err  35paking_5.err  35paking_5_8192.err  README.md  paking.err  result_BPP70_musket.csv
results/musket/bpp/Quadro/: bpphighlevelquadro.out
results/musket/mkp/2080/: Knapsack_HL_2080.csv  Knapsack_HL_2080.ods
results/musket/mkp/k20/: Knapsack_HL_k20.csv  Knapsack_HL_k20.ods
results/musket/mkp/quadro/: Knapsack_HL_Quadro.csv  Knapsack_HL_Quadro.ods
results/musket/mkp/v100/: Knapsack_HL_v100.csv  Knapsack_HL_v100.ods
results/musket/tsp/2080/: Musket_1,3,5-12_accumulatedkernels.csv  Musket_1,3,5-12_average.csv  Musket_1,3,5-12_kernel_sumofiterations.csv  Musket_1,3,5-12_splitkernels.csv  Musket_TSP_average_ordererd.csv  Musket_route_kernel_average.csv
visualization/images/Knapsack/: mknap_ll_2080vsv100
visualization/scripts/accumulatedata/: accumulateBrenoKnapsack.py  lowlevel_aggregate_splitkernels.py  musket_aggregate_completetime.py  musket_aggregate_completetime_TSP.py  musket_aggregate_splitkernels.py  result_TSP70_musket.csv
visualization/scripts/graphs/bpp/: bpp_graph_completeruntime_70-75_Musket_comparison.py  bpp_graph_completeruntime_comparison.py  bpp_graph_packing_kernelcompleteruntime_comparison.py  generate table.py  ll_bpp_graph_completeruntime_comparison70.py  speedup-table.txt  untitled1.py
visualization/scripts/graphs/knapsack/: Knapsack_GPU_2080.py  Knapsack_GPU_v100.py  Knapsack_GPU_v100_and_2080_comparison.py  Knapsack_QUadroComparison.py  ll_mknap_graph_completeruntime_comparison_v100_vs_2080.py  ll_vs_musket_bpp_graph_runtime_comparison70.py
visualization/scripts/graphs/tsp/: bar_graph_big_problem_routekernel_runtime_comparison.py  bar_graph_bigproblem_runtime_comparison.py  complete_runtime.py  graph_completeruntime_comparison.py  graph_completeruntime_comparison_Musket.py  graph_route_kernelcompleteruntime_comparison.py  lowlevel_splitkernels.py  musket_splitkernels.py  percent_stacked_barplot_lowlevel.py  percent_stacked_barplot_mixed.py  percent_stacked_barplot_musket.py
(+15 files in other folders)
